--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <!-- happy clients -->
         <section class="my-24">
             <h3 class="text-5xl mb-12 font-semibold text-center">
-                Happy <span class="text-[#E76F51]">Clients Says</span>
+                Happy <span class="text-[#E76F51]">Clients Says</span> </h3>
                 <div class="grid gap-10 grid-cols-1 md:grid-cols-2 lg:grid-cols-3 p-12">
                     <!-- first review -->
                     <div class="card  bg-base-100 p-9 border border-gray-400 ">
